unpackaged/main/default/objects/BSF_Outbound_Notification_Settings__mdt/fields/HighPriorityLimit__c.field-meta.xml
<CustomField>
    <fullName>HighPriorityLimit__c</fullName>
    <label>HighPriorityLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>