unpackaged/main/default/objects/BSF_Outbound_Notification_Settings__mdt/fields/HourlyLimit__c.field-meta.xml
<CustomField>
    <fullName>HourlyLimit__c</fullName>
    <label>HourlyLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>