unpackaged/main/default/objects/BSF_Outbound_Notification_Settings__mdt/fields/NotificationType__c.field-meta.xml
<CustomField>
    <fullName>NotificationType__c</fullName>
    <label>NotificationType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SalesforcePush</fullName>
                <label>Salesforce Push</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>OneOff</fullName>
            </value>
            <value>
                <fullName>CustomSMS</fullName>
                <label>Custom SMS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>