unpackaged/main/default/objects/BSF_Outbound_Notification_Settings__mdt/fields/OtherPriorityLimit__c.field-meta.xml
<CustomField>
    <fullName>OtherPriorityLimit__c</fullName>
    <label>OtherPriorityLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>